# pkg/db/model_db.go
@@ -4,14 +4,12 @@ import (
 	"time"
 
 	"github.com/lib/pq"
-	"gorm.io/gorm"
 )
 
 type Model struct {
-	ID        uint64         `gorm:"primarykey" json:"id"`
-	CreatedAt time.Time      `json:"created_at"`
-	UpdatedAt time.Time      `json:"updated_at"`
-	DeletedAt gorm.DeletedAt `gorm:"index" json:"deleted_at"`
+	ID        uint64    `gorm:"primarykey" json:"id"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
 }
 
 type Author struct {
@@ -27,10 +25,10 @@ type Book struct {
 	Title         string      `json:"title" gorm:"type:text"`
 	NumberOfPages int         `json:"number_of_pages"`
 	Cover         string      `json:"cover"`
-	Authors       []*Author   `json:"-" gorm:"many2many:author_books"`
-	Users         []*User     `json:"-" gorm:"many2many:user_books"`
-	Categories    []*Category `json:"-" gorm:"many2many:category_books"`
-	ISBN          int         `˙json:"isbn"`
+	Authors       []*Author   `json:"authors" gorm:"many2many:author_books"`
+	Users         []*User     `json:"users" gorm:"many2many:user_books"`
+	Categories    []*Category `json:"categories" gorm:"many2many:category_books"`
+	ISBN          uint64      `json:"isbn"`
 }
 
 type Category struct {
